# simple-chat

./: .gitignore  CMakeLists.txt  README.md
include/client/: client.hpp
include/common/: common.hpp
include/server/: server.hpp
src/client/: client.cpp  main.cpp
src/common/: common.cpp
src/server/: main.cpp  server.cpp
